cluster/apps/games/wow/templates/mysql-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: wow
spec:
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
