cluster/apps/games/wow/templates/adminer-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wow-adminer
  namespace: wow
  annotations:
    external-dns.alpha.kubernetes.io/controller: dns-controller
spec:
  parentRefs:
    - name: envoy-internal
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - wow-adminer.<secret:private-domain>
  rules:
    - backendRefs:
        - name: wow-adminer
          port: 8080
